fixing collapse navbar

--- a/landingpage/src/Components/NavBar/NavBar.scss
+++ b/landingpage/src/Components/NavBar/NavBar.scss
@@ -43,15 +43,23 @@
   color: white;
 }
 
-#linksAndButton {
-  width: 75vw;
-  max-width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding-top: 10px;
+.collapse.navbar-collapse {
+  #linksAndButton {
+    width: 80vw;
+    max-width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 10px;
+  }
 }
 
-.show {
+.collapse.navbar-collapse.show {
   display: flex;
   flex-direction: column;
+  #linksAndButton {
+    display: flex;
+    flex-direction: column;
+  }
 }
